# android-source-browsing.platform--external--id3lib

./: .gitignore
examples/: Mp3test.sln  Mp3test.vcproj  demo_convert_options.c  demo_copy_options.c  demo_info.cpp  demo_info_options.c  getopt1.c
include/: id3.h
include/id3/: field.h  globals.h  id3lib_frame.h  misc_support.h  readers.h  tag.h  utils.h
libprj/: Makefile  id3lib.sln  id3lib.vcproj
libprj/id3lib.xcodeproj/: project.pbxproj
m4/: id3_unicode.m4
prj/: Makefile.am  id3lib.def  id3lib.sln  id3lib.vcproj  version.rc
prj/macosx/: Makefile.am  config.h  id3lib-Info.plist
prj/macosx/id3lib.xcodeproj/: Makefile.am  project.pbxproj
src/: c_wrapper.cpp  field.cpp  field_binary.cpp  field_impl.h  field_string_ascii.cpp  field_string_unicode.cpp  frame.cpp  frame_impl.cpp  frame_parse.cpp  frame_render.cpp  header_frame.cpp  header_frame.h  header_tag.cpp  helpers.cpp  io_helpers.cpp  misc_support.cpp  mp3_header.h  mp3_parse.cpp  tag.cpp  tag_file.cpp  tag_find.cpp  tag_impl.cpp  tag_impl.h  tag_parse.cpp  tag_parse_v1.cpp  utils.cpp
