# Copyright (C) 1999 Scott Thomas Haug <scott@id3.org>
# Copyright (C) 2002 Thijmen Klok <thijmen@id3lib.org>
# Copyright (C) 2006 Andre Pang <ozone@algorithm.com.au>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

EXTRA_DIST = project.pbxproj

